--- a/app/views/login.ejs
+++ b/app/views/login.ejs
@@ -8,7 +8,7 @@
   <body>
     <h1><%= t.$0002 %></h1>
     <ul>
-      <li><a href="https://myrproducciones.herokuapp.com/"><%= t.$0007 %></a></li>
+      <li><a href="<%= s.is_production ? s.GLOBAL : (s.LOCAL + ':' + s.PORT) %>/"><%= t.$0007 %></a></li>
     </ul>
   </body>
 </html>
